Apply raw opt-in to html components

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/actions_menu-dividers.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/actions_menu-dividers.html.twig
@@ -25,7 +25,8 @@
                     'href': '/four'
                 }
             ]
-        ]
+        ],
+        'raw': true
     })
 }}
 {% endblock %}
