--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/actions_menu-items.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/actions_menu-items.html.twig
@@ -13,7 +13,8 @@
                     'href': '/two'
                 }
             ]
-        ]
+        ],
+        'raw': true
     })
 }}
 {% endblock %}
