--- a/views/pulsar/components/nav_help.html.twig
+++ b/views/pulsar/components/nav_help.html.twig
@@ -1,6 +1,7 @@
 {{
     nav.help({
         'label': 'User Guides',
+        'raw': true,
         'items': [
             {
                 'title': 'CMS',
