--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -77,6 +77,7 @@
                         html.button_dropdown({
                             'class': 'btn--outline btn--inverse',
                             'label': html.icon('building-o') ~ ' <span class="toolbar-action__text">Pulsar City Council</span>',
+                            'raw': true,
                             'items': [
                                 html.link({
                                     "label": html.icon('random') ~ " Stellar City Council",
@@ -93,6 +94,7 @@
                         html.button_dropdown({
                             'class': 'btn--outline btn--inverse',
                             'label': html.icon('user-o') ~ ' <span class="toolbar-action__text">Paul Stanton</span> (23)',
+                            'raw': true,
                             'items': [
                                 html.link({
                                     "label": html.icon('user') ~ " My details",
