--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -179,7 +179,8 @@
             html.button({
                 'class': 'dropdown-toggle btn--outline btn--inverse',
                 'label': html.icon('book', { 'label': options.label|default('help') }) ~ ' <span class="caret"></span>',
-                'data-toggle': 'dropdown'
+                'data-toggle': 'dropdown',
+                'raw': true
             })
         }}
         <div class="dropdown__menu">
