--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/actions_menu.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/actions_menu.html.twig
@@ -1,6 +1,8 @@
 {% extends '@cssTests/visual-regression-layout.html.twig' %}
 {% block body %}
 {{
-    html.actions_menu()
+    html.actions_menu({
+        'raw': true
+    })
 }}
 {% endblock %}
