--- a/views/lexicon/includes/notifications.html.twig
+++ b/views/lexicon/includes/notifications.html.twig
@@ -4,7 +4,8 @@
                 'class': 'btn--outline btn--inverse notifications-toggle has-new is-active',
                 'label': html.icon('bell-o', { 'label': 'Show notifications'}) ~ ' <span class="caret"></span>',
                 'data-toggle': 'dropdown',
-                'aria-expanded': false
+                'aria-expanded': false,
+                'raw': true
             })
         }}
 
