Apple raw opt-in to form, elem and flash components

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/elem/paragraph-raw.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/elem/paragraph-raw.html.twig
@@ -1,14 +1,14 @@
 {% extends '@cssTests/visual-regression-layout.html.twig' %}
 {% block body %}
 {{
-    form.content({
-        'value': 'foo <script>BAR</script>'
+    elem.paragraph({
+        'value': 'hello <script>FOO</script>'
     })
 }}
 
 {{
-  form.content({
-      'value': 'foo <script>BAR</script>',
+  elem.paragraph({
+      'value': 'hello <script>FOO</script>',
       'raw': true
   })
 }}
