--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/flash/flash-default.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/flash/flash-default.html.twig
@@ -2,7 +2,8 @@
 {% block body %}
 {{
     flash.message({
-        'message': 'This is the default message style with <a href="#">an example link</a>'
+        'message': 'This is the default message style with <a href="#">an example link</a>',
+        'raw': true
     })
 }}
 {% endblock %}
