--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/flash/flash-info.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/flash/flash-info.html.twig
@@ -3,7 +3,8 @@
 {{
     flash.message({
         'message': 'This is the info message style with <a href="#">an example link</a>',
-        'type': 'info'
+        'type': 'info',
+        'raw': true
     })
 }}
 {% endblock %}
