--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/flash/flash-non-dismissable.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/flash/flash-non-dismissable.html.twig
@@ -3,7 +3,8 @@
 {{
     flash.message({
         'message': 'This is a non-dismissable message with <a href="#">an example link</a>',
-        'dismissable': false
+        'dismissable': false,
+        'raw': true
     })
 }}
 {% endblock %}
