--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/help-raw.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/help-raw.html.twig
@@ -1,13 +1,13 @@
 {% extends '@cssTests/visual-regression-layout.html.twig' %}
 {% block body %}
 {{
-    form.content({
+    form.help({
         'value': 'foo <script>BAR</script>'
     })
 }}
 
 {{
-  form.content({
+  form.help({
       'value': 'foo <script>BAR</script>',
       'raw': true
   })
